# VisionAI

./: .gitignore  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  PHASE_10_SETUP.md  README.md  VisionAI_PRD.md  VisionAI_PRD_v2.md  create_demo_pipeline.py  firebase.json  fix_ui.py  implementationplan.md  interview_evaluator_model.joblib  jobs.json  key-management.md  uiuxplan.md
backend/: .env  .env.example  .gitignore  Dockerfile  README.md  clear_causal_cache.py  dev_server.py  dummy_loan_model.joblib  main.py  requirements.txt  serviceAccountKey.json  test_cicd.py  verify_llm_bias.py  verify_running_server.py
data to test/: audit_dep_1_resume_screener_model.joblib  drift_week1.csv  (+9 more)
visionai-sdk/: LICENSE  README.md  pyproject.toml
visionai-sdk/src/visionai/: __init__.py  _version.py  audit.py
visionai-sdk/src/visionai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
visionai-sdk/src/visionai/advanced/: __init__.py  adversarial_simulator.py  bias_origin_tracer.py  model_comparison.py  red_team.py  whistleblower.py
visionai-sdk/src/visionai/analysis/: __init__.py  data_bias_scanner.py  explainability.py  feature_laundering.py  flip_sensitivity.py  historical_harm.py  intersectional_audit.py  model_bias_evaluator.py  severity_scorer.py  shadow_testing.py
visionai-sdk/src/visionai/compliance/: __init__.py
visionai-sdk/src/visionai/preprocessing/: __init__.py  auto_binner.py  data_profiler.py  proxy_detector.py  schema_parser.py
visionai-sdk/src/visionai/utils/: __init__.py  io.py
visionai-sdk/src/visionai_fairness.egg-info/: PKG-INFO  SOURCES.txt
(+168 files in other folders)
